# buaa-computer-organization

./: .gitignore  P3.circ  build-msys.sh  run-msys.sh  run.sh
.github/: dependabot.yml
.github/workflows/: build.yml
P0/: CRC.circ  fsm.circ  ftoi.circ  grf.circ  navigation.circ
P1/: BlockChecker.v  Makefile  alu.v  ext.v  gray.v  splitter.v  string.v
P2/: convolution.asm  factorial.asm  matrix.asm  maze.asm  palindrome.asm  permutation.asm
P3/: .gitignore  P3-test.circ  P3.circ  test-alu.py  test-dm.py  test-rand.py  testlib.py
P4/: .gitignore  Makefile  alu.v  assemble.bat  constants.v  ctrl.v  dm.v  ext.v  grf.v  im.v  mips.v  pack.bat  test-alu.py  test-dm.py  test-rand.py  test_coordinator.v  testlib.py
P5/: def.v  mips.v  stage_decode.v  stage_execute.v  stage_fetch.v  stage_mem.v
P6/: Makefile  def.v  mips.v  stage_decode.v  stage_execute.v  stage_mem.v
P7/: TC.v  bridge.v  cp0.v  def.v  grf.v  mips.v  stage_decode.v  stage_execute.v  stage_fetch.v  stage_mem.v  stage_write.v
Pre/: 4bit_sort.circ  ALU1.v  ALU2.v  code.v  counting1.v  counting2.v  cpu_checker1.v  cpu_checker2.v  fib1.circ  fib2.circ  hamilton.asm  id_fsm.v  leap.asm  matrix.asm  mod5.circ  swap.circ
co-tester/: .gitignore  Cargo.toml  build.rs
co-tester/src/: code_handler.asm  gen.rs  log.rs  machine.rs  main.rs
