[package]
name = "co-tester"
version = "0.1.0"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
futures = "0.3.13"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
regex = "1.4.5"
strum = "0.20"
strum_macros = "0.20"
tempfile = "3.1.0"
tokio = { version = "1.4.0", features = ["full"] }
rand = "0.8.3"
rand_distr = "0.4.0"

[profile.release]
lto = true
