[package]
name = "co-tester"
version = "0.1.0"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
futures = "0.3.15"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
regex = "1.5.4"
strum = "0.21"
strum_macros = "0.20"
tempfile = "3.1.0"
tokio = { version = "1.2.0", features = ["full"] }
rand = "0.8.4"
rand_distr = "0.4.1"

[profile.release]
lto = true
